--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,21 @@
   box-sizing: border-box;
 }
 
-body {
-  background-image: url(./assets/joshua-reddekopp--3uIUqsR-Rw-unsplash.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: calc(100vh - .5em);
+.app {
+  display: flex;
+}
+
+.backgroundImageContainer {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.backgroundImage {
+  width: 100%;
+  min-height: 100%;
 }
