--- a/src/features/image/ImageDetails.module.css
+++ b/src/features/image/ImageDetails.module.css
@@ -1,10 +1,12 @@
 .imageDetailsContainer {
-    box-shadow: inset 0 0 0 1000px rgba(255, 254, 254, 0.7);
+    box-shadow: inset 0 0 0 1000px rgba(255, 254, 254, 0.8);
     position: absolute;
     bottom: 0;
     width: 100%;
     text-align: center;
     padding: .5em;
+    display: flex;
+    justify-content: space-between;
 }
 
 .details {
@@ -15,4 +17,10 @@
 
 .photoLink {
     color: hsl(120, 98%, 17%);
+}
+
+.arrow {
+    font-size: 1.8rem;
+    margin-inline: .5em;
+    padding-inline: .3em;
 }
