--- a/src/features/quote/Quote.module.css
+++ b/src/features/quote/Quote.module.css
@@ -1,5 +1,5 @@
 .quoteContainer {
-  box-shadow: inset 0 0 0 1000px rgba(255, 254, 254, 0.6);
+  box-shadow: inset 0 0 0 1000px rgba(255, 254, 254, 0.8);
   position: absolute;
   bottom: 70px;
   width: 100%;
@@ -13,14 +13,6 @@
   font-weight: 600;
 }
 
-span {
-  z-index: 50;
+.author {
   font-size: 0.9rem;
-  font-weight: 600;
-}
-
-.quoteLink {
-  color: hsl(120, 98%, 17%);
-  margin-left: 4px;
-  vertical-align: middle;
 }
