--- a/src/features/weather/Weather.module.css
+++ b/src/features/weather/Weather.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: max-content;
+    height: max-content;
     padding: .5em;
     padding-right: 1em;
     color: hsl(0, 0%, 11%);
@@ -20,8 +21,8 @@
 
 .weatherIcon {
     width: max-content;
-    background-color:hsl(0, 0%, 68%);
-    border-radius: 100%;
+    background-color:hsl(0, 0%, 80%);
+    border-radius: 30%;
     margin: .5em;
 }
 
