--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .app {
   display: flex;
+  overflow: hidden;
 }
 
 .backgroundImageContainer {
@@ -22,4 +23,11 @@
   width: 100%;
   min-height: 100%;
   object-fit: cover;
+}
+
+@media only screen and (max-width: 820px) and (orientation: portrait) {
+  .app {
+    flex-direction: column;
+    align-items: center;
+  }
 }
