--- a/src/features/goals/addGoalForm/AddGoalForm.module.css
+++ b/src/features/goals/addGoalForm/AddGoalForm.module.css
@@ -6,3 +6,9 @@
     text-align: center;
     font-size: 2em;
 }
+
+@media only screen and (max-width: 820px) {
+    .goalInput {
+        font-size: 1.5rem;
+    }
+}
