--- a/src/features/image/ImageDetails.module.css
+++ b/src/features/image/ImageDetails.module.css
@@ -24,3 +24,9 @@
     margin-inline: .5em;
     padding-inline: .3em;
 }
+
+@media only screen and (max-width: 375px) {
+    .arrow {
+        font-size: 1rem;
+    }
+}
