--- a/src/features/quote/Quote.module.css
+++ b/src/features/quote/Quote.module.css
@@ -16,3 +16,17 @@
 .author {
   font-size: 0.9rem;
 }
+
+@media only screen and (max-width: 820px) {
+  .quote {
+    font-weight: 400;
+    font-size: 1rem;
+  }
+  .author {
+    font-size: 0.7rem;
+  }
+
+  .quoteContainer {
+    bottom: 50px;
+  }
+}
