--- a/src/features/weather/Weather.module.css
+++ b/src/features/weather/Weather.module.css
@@ -31,3 +31,15 @@
     justify-content: center;
     align-items: center;
 }
+
+@media only screen and (max-width: 500px) {
+    .description {
+        font-size: 1rem;
+    }
+    .location {
+        font-size: 1rem;
+    }
+    .weatherIcon {
+        width: 3em;
+    }
+}
