--- a/src/features/goals/addGoalForm/AddGoalForm.module.css
+++ b/src/features/goals/addGoalForm/AddGoalForm.module.css
@@ -5,6 +5,7 @@
     padding-top: .5em;
     text-align: center;
     font-size: 2em;
+    border-radius: none;
 }
 
 @media only screen and (max-width: 820px) {
