--- a/src/features/quote/Quote.module.css
+++ b/src/features/quote/Quote.module.css
@@ -20,7 +20,7 @@
 @media only screen and (max-width: 820px) {
   .quote {
     font-weight: 400;
-    font-size: 1rem;
+    font-size: .6rem;
   }
   .author {
     font-size: 0.7rem;
