--- a/src/features/image/ImageDetails.module.css
+++ b/src/features/image/ImageDetails.module.css
@@ -28,6 +28,8 @@
 @media only screen and (max-width: 375px) {
     .arrow {
         font-size: 1rem;
+        margin-inline: .2em;
+        padding-inline: .1em;
     }
     .details {
         font-size: .6rem;
